--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -571,3 +571,7 @@ green     #859900  operators, other keywords
         transform:          translateY(0);
     }
 }
+
+#gliderLogo {
+    width: 20px !important;
+}
